--- a/src/bin/dune
+++ b/src/bin/dune
@@ -1,6 +1,4 @@
 (executable
   (name Main)
   (public_name mcu_server)
-  (libraries
-    graphql schema server
-    logs logs.fmt fmt fmt.tty))
+  (libraries server logs fmt logs.fmt fmt.tty))
