--- a/src/server/dune
+++ b/src/server/dune
@@ -1,7 +1,5 @@
 (library
   (name server)
   (libraries
-    lwt lwt.unix
-    graphql graphql-lwt
-    httpaf httpaf-lwt
-    logs logs.lwt fmt))
+    httpkit httpkit-lwt lwt
+    graphql graphql-lwt schema))
